syntax = "proto3";

option csharp_namespace = "gRPCDemo";

package gRPCDemo;

// The service definition.
service DemoService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  rpc SayMultipleHello(HelloRequest) returns (stream HelloReply) {}

  rpc SayOneHelloForMultipleNames(stream HelloRequest) returns (HelloReply) {}
  
  rpc SayOneHelloInBothWays(stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
